# Bunny-Byte

./: .bunnybyte.toml.example  .env.example  .gitignore  CLAUDE.md  README.EN.md  README.md  install.sh  pyproject.toml
benchmarks/: coding_tasks.json
bunnybyte/: __init__.py  branding.py  cli.py  testing.py
bunnybyte/commands/: slash.py
bunnybyte/config/: __init__.py
bunnybyte/core/: __init__.py  compact.py  context_manager.py  context_usage.py  engine.py  engine_helpers.py  model_errors.py  model_output.py  model_stream.py  plan_mode.py  read_ledger.py  runtime.py  session_fork.py  (+14 more)
docs/: configuration.md  memory.md  sandbox.md  skills.md
scripts/: collect_resume_metrics.py  compact_benchmark.py  run_business_scenario_dogfood.py  run_human_scenario_gate.py  run_large_scale_experiments.py  run_provider_experiments.py  run_real_session_acceptance.py
tests/: test_agent_workers_acceptance.py  test_architecture_boundaries.py  test_ask_user.py  test_bunnybyte.py  test_business_scenario_dogfood.py  test_compact_benchmark.py  test_context_governance_acceptance.py  test_context_manager.py  test_engine_acceptance.py  test_evaluator.py  test_memory.py  test_metrics.py  test_permissions_acceptance.py  test_plan_progress.py  test_release_smoke.py  test_run_evidence.py  test_run_store.py  test_runtime.py  test_runtime_evidence_acceptance.py  test_safety_invariants.py  test_sandbox_config.py  test_sandbox_runner.py  test_session_fork.py  test_skills_acceptance.py  test_task_state.py  test_todo_ledger_acceptance.py  test_tool_policy_acceptance.py  test_tui.py  test_usage.py
(+24 files in other folders)
